<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ACE</string>
    <string name="action_settings">Settings</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="Start">Start</string>
    <string name="enterYourName">Enter your name…</string>
    <string name="title_activity_create_user">CreateUser</string>
    <string name="describeYourLesson">Describe your lesson…</string>
    <string name="lessonDescription">Lesson Description:</string>
    <string name="exit">Exit</string>
    <string name="send_audio">Send Audio</string>
    <string name="send_video">Send Video</string>
    <string name="enter_your_name_hint">Enter your name…</string>
    <string name="user_type">UserType</string>
    <string name="choose_a_lesson">Choose a Lesson: </string>
    <string name="refresh_lesson_list">Refresh Lesson List</string>
    <string name="create_lesson">Create Lesson</string>
    <string name="enter_lesson_name">Lesson name…</string>
    <string name="lesson_name">Lesson Name:</string>
    <string name="students_in_this_lesson">Students In This Lesson:</string>
    <string name="video_stream">Video Stream</string>
    <string name="audio_stream">Audio Stream</string>
    <string name="save_user_data">Save User Data</string>
    <string name="enter_a_name">Enter a name!</string>
    <string name="data_saved">Data Saved: </string>
    <string name="data_loaded">Data Loaded: </string>
    <string name="no_stored_data">No Stored Data</string>
    <string name="audio_on">Audio on</string>
    <string name="audio_off">Audio off</string>
    <string name="video_on">Video on</string>
    <string name="video_off">Video off</string>
    <string name="enter_lesson_details">Enter Lesson details</string>
    <string name="silent">silent</string>
    <string name="question">Question</string>
    <string name="select_a_lesson">Select a lesson</string>
    <string name="lesson_id">Lesson ID: </string>
    <string name="user_image">User image</string>
    <string name="return_to_lesson">Return To Lesson</string>
    <string name="text_sent">TEXT SENT</string>
    <string name="name">NAME</string>

</resources>
