<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ace.androidclassroomextension.creatorActivities.CreateUser">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left">

        <TextView
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameOfUser"
            android:text="@string/Start"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:id="@+id/user_photo"
            android:src="@drawable/silhouette"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:onClick="takePhoto"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:gravity="center">
        <Switch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toggleTeacherAudio"
            android:text="@string/send_audio"/>

        <Switch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toggleTeacherVideo"
            android:text="@string/send_video"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:onClick="createTeacher"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:onClick="createStudent"/>
        </LinearLayout>

</LinearLayout>
