<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_details_fragment"
        class="com.ace.androidclassroomextension.fragments.UserDetailsFragment"
        android:layout="@layout/fragment_user_details"
        tools:layout="@layout/fragment_user_details" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_lesson"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_medium"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lesson_chooser"
        android:layout_gravity="center_horizontal" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/refresh_lesson_list"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start"/>

    </GridLayout>

</LinearLayout>